Fix odd spacing on callouts

--- a/_sass/components/_callout.scss
+++ b/_sass/components/_callout.scss
@@ -1,5 +1,5 @@
 .callout__root {
-  margin: $base-spacing $small-spacing;
+  margin: $base-spacing 0;
   padding: $medium-spacing $medium-spacing $medium-spacing $base-spacing;
   border-radius: $tiny-border-radius;
   box-shadow: 0 0 8px $light-grey;
